# RHI

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  FILES.cmake  GenFileList.py  HACKING.md  Packages.cmake  Premake5.lua  README.md  TODO.md  clang-format-run.bash  clang-format.bat  fil.spirv  generate_source_files.py  shader.spirv  todo.md
D3D12/: CMakeLists.txt
D3D12/Include/RHI-D3D12/: Loader.hpp
D3D12/Source/: CommandList.cpp  CommandList.hpp  Common.hpp  Device.cpp  Device.hpp  Resources.cpp  Resources.hpp
Examples/: Basic.cpp  CMakeLists.txt
Examples/Assets/: CMakeLists.txt
Examples/Assets/Include/Assets/: Buffer.hpp  Definitions.hpp  Image.hpp  Importer.hpp  Material.hpp  Mesh.hpp  Name.hpp  Package.hpp  SceneGraph.hpp  SerializeGLM copy.hpp  SerializeGLM.hpp
Examples/Assets/Source/: Buffer.cpp  Image.cpp  Importer.cpp  Material.cpp  Mesh.cpp  Package.cpp  SceneGraph.cpp
Examples/Base/: CMakeLists.txt  ExampleBase.cpp
Examples/Base/Include/Examples-Base/: ApplicationBase.hpp  Asset.hpp  AssimpSceneLoader.hpp  Camera.hpp  CommandLine.hpp  Common.hpp  Defer.hpp  Entry.hpp  Event.hpp  ExampleBase.hpp  Export.hpp  FileSystem.hpp  ImGuiRenderer.hpp  Log.hpp  Renderer.hpp  Scene.hpp  SceneGraph.hpp  (+2 more)
Examples/Base/Source/: ApplicationBase.cpp  AssimpSceneLoader.cpp  Camera.cpp  DeferredRenderer.cpp  ExampleBase.cpp  ImGuiRenderer.cpp  Renderer.cpp  SceneGraph.cpp  Window.cpp
Examples/Basic/: Basic.cpp  CMakeLists.txt
Examples/DeferredRenderer/: CMakeLists.txt  DeferredRenderer.cpp
Examples/Dependencies/slang-v2024.10/: CMakeLists.txt  README.md
Examples/ImGui-1.90.0/: CMakeLists.txt  ImGuiShader.hlsl  imgui.cpp  imgui_internal.h
Examples/RPI/: CMakeLists.txt
Examples/RPI/Shaders/: Basic.slang  BxDF.slang  ImGui.slang  Lighting.slang
Examples/RPI/Source/: AssimpSceneLoader.cpp  DeferredRenderer.cpp  Renderer.cpp
Examples/RenderCore/: CMakeLists.txt
Examples/RenderCore/Source/: Resources.cpp
Examples/Renderer/: CMakeLists.txt  Scene.hpp
Examples/Renderer/Source/: DeferredRenderer.cpp  DeferredRenderer.hpp  DrawList.cpp  Geometry.cpp  ImGuiPass.cpp  MeshDrawProcessor.cpp  PipelineLibrary.cpp  Renderer.cpp  Resources.cpp  Scene.cpp
Examples/ShaderCompiler/: CMakeLists.txt  CPPStructBuilder.hpp  ShaderCompiler.cpp  ShaderCompiler.hpp  compile-slang-shaders.cmake  main.cpp
Examples/Shaders/: Basic.slang  Compose.slang  ImGui.slang
Examples/Shaders/Core/: Pipeline.slang
Examples/Shaders/core/: lib.slang
Examples/SimpleExample/: CMakeLists.txt  main.cpp
Examples/SimpleExample/Shaders/: Basic.slang  BxDF.slang  Triangle.slang
Examples/Triangle/: CMakeLists.txt  Camera.hpp  GpuScene.hpp  ImGuiManager.cpp  ImGuiManager.hpp  ImGuiRenderer.cpp  ImGuiRenderer.hpp  RenderResources.hpp  Renderer.hpp  Triangle.cpp  shaders.glsl
Examples/Triangle/ImGui/: CMakeLists.txt
Examples/Triangle/Renderer/: Bindless.cpp  Bindless.hpp  BufferPool.cpp  BufferPool.hpp  BufferSuballocator.cpp  BufferSuballocator.hpp  Common.hpp  DrawList.cpp  DrawList.hpp  Drawer.hpp  Geometry.cpp  Geometry.hpp  GltfSceneImporter.hpp  ImGuiRenderer.cpp  ImGuiRenderer.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  PipelineLibrary.cpp  PipelineLibrary.hpp  RenderResources.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  SceneRenderer.cpp  SceneRenderer.hpp  SceneView.hpp  ShaderManager.hpp
Examples/Triangle/Shaders/: Basic.slang  BxDF.slang  Compose.slang  DirectLighting.slang  Lights.slang  RendererInterface.slang
RHI/: CMakeLists.txt
RHI/Include/: .clang-format
RHI/Include/RHI/: Access.hpp  Assert.hpp  Attachment.hpp  Attachments.hpp  BindGroup.hpp  Buffer.hpp  BufferPool.hpp  CommandList.hpp  CommandPool.hpp  Common.hpp  Constants.hpp  Context.hpp  CreateResources.hpp  Debug.hpp  Definition.hpp  Definitions.hpp  Device.hpp  Export.hpp  Fence.hpp  Flag.hpp  Flags.hpp  Format.hpp  FrameGraph.hpp  FrameGraphBuilder.hpp  FrameScheduler.hpp  Handle.hpp  Handle.inl  HandleTypes.hpp  Image.hpp  LRUCache.hpp  Object.hpp  Pass.hpp  PassProducer.hpp  Pipeline.hpp  PipelineState.hpp  Profiler.hpp  Queue.hpp  QueueType.hpp  RGInternals.hpp  RGPass.hpp  (+25 more)
RHI/Source/: Assert.hpp  Attachments.cpp  BindGroup.cpp  Buffer.cpp  BufferPool.cpp  CommandList.cpp  CommandPool.cpp  Context.cpp  Device.cpp  Fence.cpp  Format.cpp  FrameGraph.cpp  FrameScheduler.cpp  Handle.cpp  Image.cpp  Pass.cpp  Pipeline.cpp  Queue.cpp  RGInternals.cpp  RGPass.cpp  RGResources.cpp  RHI.cpp  RenderGraph.cpp  RenderGraphPass.cpp  RenderGraphResources.cpp  ResourceCache.cpp  Resources.cpp  Sampler.cpp  Semaphore.cpp  Shader.cpp  ShaderBindGroup.cpp  Streaming.cpp  Swapchain.cpp  pch.hpp  resource-streaming.cpp
RHI/Source/Common/: Callstack.cpp
RHI/Source/OffsetAllocator/: offsetAllocator.cpp  offsetAllocator.hpp
Vulkan/: CMakeLists.txt
Vulkan/Include/RHI/: Export.hpp
Vulkan/Include/RHI-Vulkan/: Export.hpp  Loader.hpp
Vulkan/Source/: Allocator.hpp  Barrier.hpp  BindGroup.cpp  BindGroup.hpp  Buffer.cpp  Buffer.hpp  CommandList.cpp  CommandList.hpp  CommandListAllocator.cpp  CommandListAllocator.hpp  CommandPool.cpp  CommandPool.hpp  Common.hpp  Constants.hpp  Context.cpp  Context.hpp  Conversion.hpp  DeleteQueue.cpp  DeleteQueue.hpp  Device.cpp  Device.hpp  Fence.cpp  Fence.hpp  Format.inl  Frame.cpp  Frame.hpp  FrameGraph.cpp  FrameGraph.hpp  FrameScheduler.cpp  FrameScheduler.hpp  Image.cpp  Image.hpp  Loader.cpp  MemoryAllocator.cpp  MemoryAllocator.hpp  Pass.cpp  Pass.hpp  PassExecuteContext.cpp  PassExecuteContext.hpp  Pipeline.cpp  (+37 more)
WebGPU/: CMakeLists.txt
WebGPU/Include/RHI-WebGPU/: Loader.hpp
WebGPU/Source/: CommandList.cpp  CommandList.hpp  Common.hpp  Device.cpp  Device.hpp  Frame.cpp  Frame.hpp  RenderGraph.cpp  RenderGraph.hpp  Resources.cpp  Resources.hpp  Swapchain.cpp  Swapchain.hpp
example/: Base.hpp  CMakeLists.txt  TriangleExample.cpp  stb_image.h  triangle.cpp
example/Data/Shaders/: triangle.hlsl
test/: CMakeLists.txt
test/source/: RHI_test.cpp  create_instance_test.cpp
(+520 files in other folders)
